# coffee

./: AUTHORS  COPYING  NEWS  README  THANKS  autogen.sh  configure.ac.in
icons/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  coffee-dialogs.c  coffee-dialogs.h  coffee-plugin.c  coffee-plugin.h
po/: POTFILES.in  fr.po
